# flatseeker

./: .env.example  .gitignore  README.md  check_results.py  config.example.yaml  discover_filters.py  discover_selectors.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: homegate_research.md  wgzimmer_research.md
flatseeker/: __main__.py  cache.py  config.py  filters.py  main.py  maps.py  parser.py  report.py  scraper.py
flatseeker/sites/: __init__.py  base.py  flatfox.py  unibas.py  wgzimmer.py
src/: cache.py  config.py  filters.py  main.py  maps.py  parser.py  report.py  scraper.py
src/sites/: __init__.py  base.py  flatfox.py  unibas.py  wgzimmer.py
tests/: test_filters.py  test_parser.py
