[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatseeker"
version = "0.1.0"
description = "Automated Basel WG room scanner"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "playwright",
    "python-dotenv",
    "requests",
    "rich",
    "jinja2",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
flatseeker = "flatseeker.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"flatseeker/report.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
